test/fail/import/brace_at_end.lily
#[
SyntaxError: '}' outside of a block.
    from brace_at_end.lily:6:
]#

}
